--- a/HW4/HW4_CNN.ipynb
+++ b/HW4/HW4_CNN.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/onurburakozdemir/FIZ437E/blob/main/HW4/HW4_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/OFKadi/stat/blob/main/HW4/HW4_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -87,7 +87,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset_path = 'drive/MyDrive/img_data'\n",
+        "dataset_path = 'img_data'\n",
         "\n",
         "mean = torch.tensor([0.485, 0.456, 0.406], dtype=torch.float32)\n",
         "std = torch.tensor([0.229, 0.224, 0.225], dtype=torch.float32)\n",
