Colaboratory kullanılarak oluşturuldu

--- a/HW4/HW4_MLP.ipynb
+++ b/HW4/HW4_MLP.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/onurburakozdemir/FIZ437E/blob/main/HW4/HW4_MLP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/OFKadi/stat/blob/main/HW4/HW4_MLP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "K057dBWlrwTx"
       },
@@ -83,7 +83,7 @@
         "id": "uMNoCPyFE0Zl",
         "outputId": "07ea8eb4-9893-4e49-9593-09a151d79cec"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,31 +106,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ShZyIsISWy39",
-        "outputId": "39010c41-de33-4c54-c57d-144cd489fa18"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset_path = 'drive/MyDrive/img_data'\n",
+        "dataset_path = 'img_data'\n",
         "\n",
         "mean = torch.tensor([0.485, 0.456, 0.406], dtype=torch.float32)\n",
         "std = torch.tensor([0.229, 0.224, 0.225], dtype=torch.float32)\n",
@@ -166,7 +142,7 @@
       "metadata": {
         "id": "D0KL1S5-EmgV"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +158,7 @@
         "id": "EWW_-wXsGAQ4",
         "outputId": "728d831d-447e-464e-b680-a686e69c0f8c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +217,7 @@
       "metadata": {
         "id": "P3coBq-8H2Tf"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +231,7 @@
       "metadata": {
         "id": "9LdR7oPvP1BY"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +246,7 @@
         "id": "bifwH2LaVpih",
         "outputId": "49703346-053f-46e2-bed4-3ddbc64443ae"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +281,7 @@
       "metadata": {
         "id": "fASuVwsbQtLo"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +294,7 @@
       "metadata": {
         "id": "H8jlZlHGQvT7"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +318,7 @@
       "metadata": {
         "id": "qolnT3LPQ0hQ"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +333,7 @@
       "metadata": {
         "id": "3eeBZ4dcRk_s"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +375,7 @@
       "metadata": {
         "id": "ATeW-iflQ8-i"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +418,7 @@
       "metadata": {
         "id": "iNNw0hAuRF7_"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +472,7 @@
         "id": "ybv9f3sfRl8b",
         "outputId": "af0fb098-bb67-4bb4-e415-9bee256e0f7c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +798,7 @@
         },
         "outputId": "55de79b5-24d1-45f2-b118-1a3a1f107d03"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
